# ai_translate

./: Cargo.toml
.cargo/: config.toml
src/: cli_handler.rs  logger.rs  main.rs  parser.rs  queue.rs  scanner.rs  translator.rs  utils.rs  writer.rs
